добавил атрибут sizes для картинки на странице item

--- a/item.html
+++ b/item.html
@@ -802,6 +802,11 @@
                     <img loading="lazy" alt="ADATA XPG Gammix D10 Red 16GB (2x8GB) DDR4-3200 (AX4U32008G16A-DR10)"
                       data-modal-slide="1"
                       src="https://panel.salamander.one/uploads/images/items/633337fd2f73c958966347.png"
+                      sizes="(max-width: 548px) calc(100vw - 10px),
+                             (max-width: 696px) calc(100vw - 144px),
+                             (max-width: 768px) 552px,
+                             (max-width: 1094px) 42vw,
+                             475px"
                       class="product__image " />
                   </div>
                   <div class="product__slider product-slider swiper-container">
