добавил атрибуты sizes для product__image на странице assembly

--- a/assembly.html
+++ b/assembly.html
@@ -972,6 +972,9 @@
                 <a href="/ua/gigabyte-geforce-rtx-3060-eagle-12g/" class="product__link product__image-wrapper">
                   <img alt="GIGABYTE GeForce RTX 3060 EAGLE 12G"
                     src="https://panel.salamander.one/uploads/images/items/62e9a8f56a4b5370816513.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           179px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1066,6 +1069,9 @@
                 <a href="/ua/amd-ryzen-5-3600/" class="product__link product__image-wrapper">
                   <img alt="AMD Ryzen 5 3600"
                     src="https://panel.salamander.one/uploads/images/items/62e6736ece4d6676077546.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           318px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1159,6 +1165,9 @@
                 <a href="/ua/wd-blue-hdd-6tb-35-5400rpm-256mb/" class="product__link product__image-wrapper">
                   <img alt="WD Blue HDD 6TB 3.5" 5400rpm 256MB"
                     src="https://panel.salamander.one/uploads/images/items/6390c626a7793669157772.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           179px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1249,6 +1258,9 @@
                 <a href="/ua/gigabyte-b550-aorus-elite-ax/" class="product__link product__image-wrapper">
                   <img alt="GIGABYTE B550 AORUS ELITE AX"
                     src="https://panel.salamander.one/uploads/images/items/63129a597d29b252605270.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           208px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1341,6 +1353,9 @@
                   class="product__link product__image-wrapper">
                   <img alt="AMD Radeon R7 Performance Series 8GB DDR4-2666 (R748G2606U2S-U)"
                     src="https://panel.salamander.one/uploads/images/items/627c316ec5e35080949109.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           301px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1427,6 +1442,9 @@
                 <a href="/ua/deepcool-dq850-m-v2l-850w/" class="product__link product__image-wrapper">
                   <img alt="Deepcool DQ850-M-V2L 850W"
                     src="https://panel.salamander.one/uploads/images/items/61447f7602da8615485758.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           179px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1508,6 +1526,9 @@
                 <a href="/ua/deepcool-ak620/" class="product__link product__image-wrapper">
                   <img alt="DeepCool AK620"
                     src="https://panel.salamander.one/uploads/images/items/6213fc1ef1fb4461161740.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           179px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1585,6 +1606,9 @@
                 <a href="/ua/logitech-m220-silent-charcoal/" class="product__link product__image-wrapper">
                   <img alt="Logitech M220 Silent Charcoal"
                     src="https://panel.salamander.one/uploads/images/items/62d7eef8360f1601494189.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           208px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
@@ -1648,6 +1672,9 @@
                 <a href="/ua/chieftec-scorpion-4/" class="product__link product__image-wrapper">
                   <img alt="Chieftec SCORPION 4"
                     src="https://panel.salamander.one/uploads/images/items/63dacb87c515d337075036.png"
+                    sizes="(max-width: 548px) calc(100vw - 30px),
+                           (max-width: 768px) calc(100vw - 164px),
+                           179px"
                     class="product__image">
                 </a>
                 <div class="product__main-part">
