добавил атрибут sizes для product__image на странице catalog

--- a/catalog.html
+++ b/catalog.html
@@ -894,7 +894,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -978,7 +986,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62c95bcc70099114062751.webp 320w, thumbs/s/640_0/uploads/images/items/62c95bcc70099114062751.webp 640w, thumbs/s/920_0/uploads/images/items/62c95bcc70099114062751.webp 920w, thumbs/s/1220_0/uploads/images/items/62c95bcc70099114062751.webp 1220w, thumbs/s/1920_0/uploads/images/items/62c95bcc70099114062751.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62c95bcc70099114062751.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62c95bcc70099114062751.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1059,7 +1075,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62c95bc6807c3766180073.webp 320w, thumbs/s/640_0/uploads/images/items/62c95bc6807c3766180073.webp 640w, thumbs/s/920_0/uploads/images/items/62c95bc6807c3766180073.webp 920w, thumbs/s/1220_0/uploads/images/items/62c95bc6807c3766180073.webp 1220w, thumbs/s/1920_0/uploads/images/items/62c95bc6807c3766180073.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62c95bc6807c3766180073.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62c95bc6807c3766180073.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1143,7 +1167,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e680e8993d7639410982.webp 320w, thumbs/s/640_0/uploads/images/items/62e680e8993d7639410982.webp 640w, thumbs/s/920_0/uploads/images/items/62e680e8993d7639410982.webp 920w, thumbs/s/1220_0/uploads/images/items/62e680e8993d7639410982.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e680e8993d7639410982.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e680e8993d7639410982.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e680e8993d7639410982.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1227,7 +1259,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e6880abdf5c043922581.webp 320w, thumbs/s/640_0/uploads/images/items/62e6880abdf5c043922581.webp 640w, thumbs/s/920_0/uploads/images/items/62e6880abdf5c043922581.webp 920w, thumbs/s/1220_0/uploads/images/items/62e6880abdf5c043922581.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e6880abdf5c043922581.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1311,7 +1351,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e68800e0d62401784781.webp 320w, thumbs/s/640_0/uploads/images/items/62e68800e0d62401784781.webp 640w, thumbs/s/920_0/uploads/images/items/62e68800e0d62401784781.webp 920w, thumbs/s/1220_0/uploads/images/items/62e68800e0d62401784781.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e68800e0d62401784781.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e68800e0d62401784781.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e68800e0d62401784781.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1395,7 +1443,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62991f9ddc318763483794.webp 320w, thumbs/s/640_0/uploads/images/items/62991f9ddc318763483794.webp 640w, thumbs/s/920_0/uploads/images/items/62991f9ddc318763483794.webp 920w, thumbs/s/1220_0/uploads/images/items/62991f9ddc318763483794.webp 1220w, thumbs/s/1920_0/uploads/images/items/62991f9ddc318763483794.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62991f9ddc318763483794.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62991f9ddc318763483794.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1479,7 +1535,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e6853150133938239232.webp 320w, thumbs/s/640_0/uploads/images/items/62e6853150133938239232.webp 640w, thumbs/s/920_0/uploads/images/items/62e6853150133938239232.webp 920w, thumbs/s/1220_0/uploads/images/items/62e6853150133938239232.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e6853150133938239232.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e6853150133938239232.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e6853150133938239232.webp"
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px" 
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1563,7 +1627,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e63b56b214d798741318.webp 320w, thumbs/s/640_0/uploads/images/items/62e63b56b214d798741318.webp 640w, thumbs/s/920_0/uploads/images/items/62e63b56b214d798741318.webp 920w, thumbs/s/1220_0/uploads/images/items/62e63b56b214d798741318.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e63b56b214d798741318.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e63b56b214d798741318.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e63b56b214d798741318.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1647,7 +1719,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e6870544bed959528300.webp 320w, thumbs/s/640_0/uploads/images/items/62e6870544bed959528300.webp 640w, thumbs/s/920_0/uploads/images/items/62e6870544bed959528300.webp 920w, thumbs/s/1220_0/uploads/images/items/62e6870544bed959528300.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e6870544bed959528300.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1731,7 +1811,15 @@
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy"
                   srcset="thumbs/s/320_0/uploads/images/items/62e673ed8accf848087522.webp 320w, thumbs/s/640_0/uploads/images/items/62e673ed8accf848087522.webp 640w, thumbs/s/920_0/uploads/images/items/62e673ed8accf848087522.webp 920w, thumbs/s/1220_0/uploads/images/items/62e673ed8accf848087522.webp 1220w, thumbs/s/1920_0/uploads/images/items/62e673ed8accf848087522.webp 1920w"
-                  src="thumbs/s/0_0/uploads/images/items/62e673ed8accf848087522.webp" class="product__image  ">
+                  src="thumbs/s/0_0/uploads/images/items/62e673ed8accf848087522.webp" 
+                  sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
+                  class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1807,6 +1895,13 @@
 
               <a class="product__link product__image-wrapper" href="item.html">
                 <img loading="lazy" src="https://panel.salamander.one/uploads/images/items/62e6868004fb9227403425.png"
+                sizes="(max-width: 454px) calc(100vw - 10px),
+                         (max-width: 548px) 444px,
+                         (max-width: 608px) calc(100vw - 164px),
+                         (max-width: 683px) 444px,
+                         (max-width: 953px) calc(50vw - 92px),
+                         (max-width: 1112px) calc((100vw - 202px) / 3),
+                         303px"
                   class="product__image  ">
               </a>
               <div class="product__main-part">
