--- a/item.html
+++ b/item.html
@@ -814,6 +814,7 @@
 
                       <img loading="lazy" alt="img1"
                         src="https://panel.salamander.one/uploads/images/items/633337fd2f73c958966347.png"
+                        sizes="108px"
                         class="swiper-slide product-slider__item" />
 
                     </div>
