--- a/shops.html
+++ b/shops.html
@@ -950,7 +950,7 @@
             <div class="product-tabs__content">
               <div id="shops" class="product-shops product-tabs__block product-tabs__block--active">
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
                   <div class="discount">
@@ -984,10 +984,6 @@
                         </span>
                       </span>
                     </div>
-                    <button class="product-shop__show-more" type="button">
-                      Ещё <span>14</span> других цен в этом магазине от <span>2519.99</span> до <span>3519.99</span>
-                    </button>
-                    <span class="product-shop__dashed-line"></span>
                   </div>
                   <div class="product-shop__price product-price">
                     <span class="product-price__price price price--big">
@@ -1001,7 +997,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="compx">
 
 
                   <div class="discount">
@@ -1045,7 +1041,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="rozetka">
 
 
                   <div class="discount">
@@ -1088,7 +1084,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="compx">
 
 
                   <div class="discount">
@@ -1132,7 +1128,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="kvshop">
 
 
                   <div class="discount">
@@ -1176,7 +1172,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="comtrading">
 
 
                   <div class="discount">
@@ -1220,7 +1216,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="comtrading">
 
 
                   <div class="discount">
@@ -1264,7 +1260,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="enko">
 
 
                   <div class="discount">
@@ -1308,7 +1304,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="artline">
 
 
                   <div class="discount">
@@ -1352,7 +1348,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="itbox">
 
 
                   <div class="discount">
@@ -1396,7 +1392,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="rozetka">
 
 
                   <div class="discount">
@@ -1440,7 +1436,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="zhuk">
 
 
                   <div class="discount">
@@ -1484,7 +1480,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="enko">
 
 
                   <div class="discount">
@@ -1528,7 +1524,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="fua">
 
 
                   <div class="discount">
@@ -1573,7 +1569,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="fua">
 
 
                   <div class="discount">
@@ -1617,7 +1613,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="denika">
 
 
                   <div class="discount">
@@ -1661,7 +1657,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="pcshop">
 
 
                   <div class="discount">
@@ -1705,7 +1701,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="telemart">
 
 
                   <div class="discount">
@@ -1750,7 +1746,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="ktc">
 
 
                   <div class="discount">
@@ -1794,7 +1790,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="brain">
 
 
                   <div class="discount">
@@ -1838,7 +1834,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="yua">
 
 
                   <div class="discount">
@@ -1882,7 +1878,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
                   <div class="discount">
@@ -1929,7 +1925,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="enko">
 
 
                   <div class="discount">
@@ -1973,7 +1969,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="denika">
 
 
                   <div class="discount">
@@ -2016,7 +2012,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="stylus">
 
 
                   <div class="discount">
@@ -2060,7 +2056,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
                   <div class="discount">
@@ -2107,7 +2103,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="denika">
 
 
                   <div class="discount">
@@ -2151,7 +2147,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="ktc">
 
 
                   <div class="discount">
@@ -2195,7 +2191,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="brain">
 
 
                   <div class="discount">
@@ -2239,7 +2235,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="artline">
 
 
                   <div class="discount">
@@ -2284,7 +2280,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="fua">
 
 
                   <div class="discount">
@@ -2329,7 +2325,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="comtrading">
 
 
                   <div class="discount">
@@ -2374,7 +2370,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="zhuk">
 
 
                   <div class="discount">
@@ -2418,7 +2414,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="comtrading">
 
 
                   <div class="discount">
@@ -2462,7 +2458,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="enko">
 
 
                   <div class="discount">
@@ -2506,7 +2502,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="touch">
 
 
                   <div class="discount">
@@ -2550,7 +2546,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="artline">
 
 
                   <div class="discount">
@@ -2595,7 +2591,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="zhuk">
 
 
                   <div class="discount">
@@ -2639,7 +2635,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="kvshop">
 
 
                   <div class="discount">
@@ -2683,7 +2679,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="yua">
 
 
                   <div class="discount">
@@ -2727,7 +2723,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="compx">
 
 
                   <div class="discount">
@@ -2771,7 +2767,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="stylus">
 
 
                   <div class="discount">
@@ -2815,7 +2811,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="fua">
 
 
                   <div class="discount">
@@ -2859,7 +2855,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="rozetka">
 
 
                   <div class="discount">
@@ -2903,7 +2899,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
                   <div class="discount">
@@ -2950,7 +2946,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
                   <div class="discount">
@@ -2997,7 +2993,7 @@
                   </div>
                 </div>
 
-                <div class="product-shops__shop product-shop">
+                <div class="product-shops__shop product-shop" data-shop="aliexpress">
 
 
 
