адаптировал кнопку показа магазинов

--- a/shops.html
+++ b/shops.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/swiper-bundle.min.css?v=1618872148">
-  <link rel="stylesheet" href="/css/style.css?v=1685467242">
+  <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>AMD Ryzen 5 3600 купить по лучшей цене в Украине</title>
   <meta name="description" content="Сравнивайте цены на AMD Ryzen 5 3600 и покупайте дешевле в Украине" />
 
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="./site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
@@ -805,11 +805,11 @@
                              (max-width: 768px) 552px,
                              (max-width: 1094px) 42vw,
                              475px" data-source-format="png"
-                      srcset="/thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
-                      src="/thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" alt="AMD Ryzen 5 3600"
+                      srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
+                      src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" alt="AMD Ryzen 5 3600"
                       data-modal-slide="1"
                       src="https://panel.salamander.one/uploads/images/items/62e6736ece4d6676077546.png"
-                      class="product__image " />
+                      class="product__image" />
                   </div>
                   <div class="product__slider product-slider swiper-container">
                     <div class="swiper-wrapper">
@@ -819,8 +819,8 @@
                              (max-width: 768px) 552px,
                              (max-width: 1094px) 42vw,
                              475px" alt="img1" data-source-format="png"
-                        srcset="/thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
-                        src="/thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp"
+                        srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
+                        src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp"
                         class="swiper-slide product-slider__item" />
 
                     </div>
@@ -3358,14 +3358,14 @@
       </filter>
     </svg>
   </div>
-  <script src="/js/nouislider.min.js?v=1644712164"></script>
+  <script src="./js/nouislider.min.js"></script>
 
-  <script src="/js/swiper-bundle.min.js?v=1618184523"></script>
-  <script src="/js/main.js?v=1683044940"></script>
-  <script src="/js/qrcode.min.js?v=1627859055"></script>
+  <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="/js/script.js?v=1685281316"></script>
+  <script src="./js/script.js"></script>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
