assemblage-parts__part open animation

--- a/item.html
+++ b/item.html
@@ -2553,7 +2553,7 @@
   <script src="./js/nouislider.min.js"></script>
 
   <script src="./js/swiper-bundle.min.js"></script>
-  <script src="./js/main.js?v=1687271847"></script>
+  <script src="./js/main.js"></script>
   <script src="./js/qrcode.min.js"></script>
 
 
